fixed latest posts on mobile devices

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -112,6 +112,9 @@
             transform: scale(1.20);
           }
         }
+        @media (max-width: 550px) {
+          white-space: normal !important;
+        }
       }
     }
   }
